--- a/pom.xml
+++ b/pom.xml
@@ -67,10 +67,23 @@
 			<artifactId>spring-data-commons</artifactId>
 			<version>2.6.2</version>
 		</dependency>
+
+		<!-- devtools -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+
+		<!-- Thymeleaf Layout Dialect -->
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<!--<version>3.1.0</version>-->
+		</dependency>
 	</dependencies>
 
 	<build>
-		<!--Qdomain-->
+		<!-- Qdomain -->
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
